force-app/main/default/objects/Bundle_Entry__c/Bundle_Entry__c.object-meta.xml
<CustomObject>
    <label>Bundle Entry</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Bundle Entries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>