force-app/main/default/objects/Bundle_Entry__c/fields/Entry_Label__c.field-meta.xml
<CustomField>
    <fullName>Entry_Label__c</fullName>
    <formula>Protocol__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Label</label>
    <type>Text</type>
</CustomField>