force-app/main/default/objects/Bundle_Entry__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Bundle Entries</relationshipLabel>
    <relationshipName>Bundle_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>