force-app/main/default/objects/Bundle_Entry__c/fields/Treatment_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Bundle__c</fullName>
    <label>Treatment Bundle</label>
    <referenceTo>Treatment_Bundle__c</referenceTo>
    <relationshipLabel>Bundle Entries</relationshipLabel>
    <relationshipName>Bundle_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>